--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "logfmt": "^1.1.2",
-    "express": "^3.5.1"
+    "express": "^3.5.1",
+    "request": "2.33.x",
+    "postmark": "0.2.x"
   }
 }
